[package]
name = "pecan-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
axum = "0.8"
futures = "0.3.6"
uuid.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4", features = ["json"] }
rand = "0.9.2"
http = "1.1.0"
tower-http = { version = "0.6", features = ["cors"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror.workspace = true
pecan-core = { path = "../pecan-core" }